Prepro - Model - App

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,15 @@ Scrapping - Test.ipynb
 SeLoger_Selenium_Debug.ipynb
 user_agent.py
 Selenium_Scapping_test.py
+data_lyon_sl.csv
+data_paris_sl.csv
+lyon_sl.csv
+paris_sl.csv
+Project Prediction Preprocessing BD.ipynb
+Project Prediction Preprocessing LYON (SL ET BD).py
+Project Prediction Preprocessing PARIS (SL ET BD).py
+Project Prediction Preprocessing SL - final.ipynb
+Project Prediction Preprocessing SL.ipynb
+seloger_stream_test.py
+seloger_stream1.py
+seloger_stream2.py
